# VCP-Core

./: .env.example  .gitignore  LICENSE  README.md  example-cfg.yml  pyproject.toml
video_content_preprocessor/: __init__.py  console.py  constants_config.py  validator.py
video_content_preprocessor/content_filter/: __init__.py  video_searcher.py
video_content_preprocessor/content_filter/entity/: channel.py  video.py
video_content_preprocessor/downloader/: __init__.py  video_audio_downloader.py  video_clipper.py
video_content_preprocessor/model/: schema.py
video_content_preprocessor/utilities/: captions_utility.py  contents_builder.py
